--- a/res/layout/activity_internalmaps.xml
+++ b/res/layout/activity_internalmaps.xml
@@ -46,7 +46,7 @@
         <ImageView
             android:id="@+id/imageView1"
             android:layout_width="match_parent"
-            android:layout_height="264dp" />
+            android:layout_height="match_parent" />
 
     </FrameLayout>
 
